# mod-manager

./: .eslintrc.cjs  .gitignore  .prettierrc.cjs  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  FetchModDetails.tsx  router.tsx  style.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma/migrations/20230123205736_/: migration.sql
src-tauri/prisma/migrations/20230123205812_/: migration.sql
src-tauri/prisma/migrations/20230124223350_/: migration.sql
src-tauri/prisma/migrations/20230124224029_/: migration.sql
src-tauri/prisma/migrations/20230124234648_/: migration.sql
src-tauri/prisma/migrations/20230205123119_/: migration.sql
src-tauri/prisma/migrations/20230205222730_/: migration.sql
src-tauri/src/: commands.rs  main.rs
src/Router/: Games.tsx  __root.tsx
src/Router/Mods/: Mod.tsx  Mods.tsx
src/pages/: Home.tsx  Mods.tsx  Router.tsx
src/ui/: Button.tsx  Checkbox.tsx  Code.tsx  Dialog.tsx  DragDrop.tsx  Editor.tsx  Field.tsx  Form.tsx  HTMLRenderer.tsx  Image.tsx  Input.tsx  Notifications.tsx  Select.tsx  Switch.tsx  Table.tsx
