[package]
name = "mod-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["TLDRQwerty"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }

tokio = { version = "1.13", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
url = "2.3.1"
tempfile = "3.3.0"
zip = "0.6.3"
rocket = "0.4.11"
thiserror = "1.0.38"
bbcode = "1.0.2"
html2md = "0.2.14"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
